<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <!-- android:background="@color/hintergrundfarbe">-->

    <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@android:id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <TabWidget
                android:id="@+id/gutting"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </TabWidget>
            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            </FrameLayout>
        </LinearLayout>
    </TabHost>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hello_world"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:id="@+id/TextEingabe"
        android:layout_gravity="center_horizontal"
        android:text="@string/BeschreibungEditText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/BeschreibungsAnzeige"
        android:id="@+id/GeladenerText"
        android:layout_gravity="center_horizontal"
        android:phoneNumber="false"
        android:layout_weight="1.04"
        android:enabled="false" />

    <Button
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:text="@string/buttonSafe"
        android:id="@+id/buttonSafe"
        android:nestedScrollingEnabled="false"
        android:enabled="true"
        android:layout_marginTop="40dp"
        android:clickable="false"
        android:singleLine="false"
        android:layout_weight="0.18" />

    <Button
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:text="@string/buttonLoad"
        android:id="@+id/buttonLoad"
        android:capitalize="characters"
        android:enabled="true"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:singleLine="false" />

</LinearLayout>